force-app/main/default/objects/TemplateDataSource__c/TemplateDataSource__c.object-meta.xml
<CustomObject>
    <description>Defines additional data sources for document templates. Use this to query unrelated objects (cross-object queries) in a secure, admin-controlled manner.</description>
    <label>Template Data Source</label>
    <nameField>
        <displayFormat>DS-{0000}</displayFormat>
        <label>Data Source Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Data Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>