force-app/main/default/objects/TemplateDataSource__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <description>The alias used to reference this data source in templates. Use {{#Alias}}...{{/Alias}} for repeating data or {{Alias.FieldName}} for single records.</description>
    <inlineHelpText>Alias to use in template (e.g., "OpenCases" for {{#OpenCases}} or {{OpenCases.Subject}})</inlineHelpText>
    <label>Alias</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>