force-app/main/default/objects/TemplateDataSource__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional description explaining the purpose of this data source.</description>
    <inlineHelpText>Description of what this data source provides</inlineHelpText>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>