force-app/main/default/objects/TemplateDataSource__c/fields/DocumentTemplate__c.field-meta.xml
<CustomField>
    <fullName>DocumentTemplate__c</fullName>
    <description>The parent document template this data source belongs to.</description>
    <label>Document Template</label>
    <referenceTo>DocumentTemplate__c</referenceTo>
    <relationshipLabel>Data Sources</relationshipLabel>
    <relationshipName>DataSources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>