force-app/main/default/objects/TemplateDataSource__c/fields/FieldList__c.field-meta.xml
<CustomField>
    <fullName>FieldList__c</fullName>
    <description>Comma-separated list of fields to query. Leave blank to auto-detect from template usage. Supports relationship fields (e.g., Owner.Name, Account.BillingCity).</description>
    <inlineHelpText>Fields to query (comma-separated). Leave blank to auto-detect from template.</inlineHelpText>
    <label>Field List</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>