force-app/main/default/objects/TemplateDataSource__c/fields/FilterCondition__c.field-meta.xml
<CustomField>
    <fullName>FilterCondition__c</fullName>
    <description>WHERE clause filter condition. Use :FieldName for bind variables from the main record (e.g., AccountId = :AccountId). Static values are also supported (e.g., Status = 'Open').</description>
    <inlineHelpText>Filter condition using bind variables like :AccountId or :Id (e.g., "AccountId = :AccountId AND Status = 'Open'")</inlineHelpText>
    <label>Filter Condition</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>