force-app/main/default/objects/TemplateDataSource__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this data source will be ignored during document generation.</description>
    <inlineHelpText>Uncheck to disable this data source without deleting it</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>