force-app/main/default/objects/TemplateDataSource__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>The Salesforce object API name to query (e.g., Case, Product2, Custom_Object__c).</description>
    <inlineHelpText>API name of the object to query (e.g., Case, Product2)</inlineHelpText>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>