force-app/main/default/objects/TemplateDataSource__c/fields/OrderBy__c.field-meta.xml
<CustomField>
    <fullName>OrderBy__c</fullName>
    <description>ORDER BY clause for sorting results (e.g., CreatedDate DESC, Name ASC).</description>
    <inlineHelpText>Sort order (e.g., "CreatedDate DESC" or "Name ASC")</inlineHelpText>
    <label>Order By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>