force-app/main/default/objects/TemplateDataSource__c/fields/RecordLimit__c.field-meta.xml
<CustomField>
    <fullName>RecordLimit__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Maximum number of records to return. Default is 100, maximum is 200.</description>
    <inlineHelpText>Maximum records to return (default 100, max 200)</inlineHelpText>
    <label>Record Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>