force-app/main/default/objects/TemplateDataSource__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <description>Controls the order in which data sources are processed. Lower numbers are processed first.</description>
    <inlineHelpText>Processing order (lower numbers processed first)</inlineHelpText>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>